chore<travis>: improve travis
- Use the gometalinter to make static check. Gometalinter is a tool that concurrently runs a whole bunch of those linters
- merge command

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: go
 
 go:
-  - 1.7.6
-  - 1.8.7
-  - 1.9.4
+  - 1.7.x
+  - 1.8.x
+  - 1.9.x
 
 go_import_path: github.com/felixhao/overlord
 
@@ -13,16 +13,18 @@ services:
 install:
   - go get github.com/BurntSushi/toml
   - go get github.com/pkg/errors
-  - go get -u github.com/mdempsky/unconvert
-  - go get -u github.com/gordonklaus/ineffassign
-  - go get -u github.com/golang/lint/golint
-  - go get -u honnef.co/go/tools/cmd/gosimple
+  - go get -u github.com/alecthomas/gometalinter
+  - gometalinter --install
 
 script:
-  - find . ! \( -path './vendor' -prune \) -type f -name '*.go' -print0 | xargs -0 gofmt -l -s
-  - gosimple -ignore "$(cat .gosimpleignore)" $(go list ./... | grep -v /vendor/)
-  - golint ./...
-  - unconvert $(go list ./... | grep -v /vendor/)
-  - ineffassign .
-  - cd proxy
-  - go test -run=TestProxy
+  - gometalinter --disable-all  \
+    --enable=gosimple           \
+    --enable=golint             \
+    --enable=ineffassign        \
+    --enable=unconvert          \
+    --enable=vet                \
+    --skip=prote                \
+    --skip=.git                 \
+    --skip=vendor               \
+    --tests ./...
+  - go test -run=TestProxy ./...
